Update to Dune 2.9

--- a/lib/dune
+++ b/lib/dune
@@ -1,8 +1,8 @@
 (library
-  (name        GI_bindings_generator)
-  (public_name gi-bindings-generator)
-  (libraries ctypes ctypes.foreign str gobject-introspection)
-  (preprocess (pps bisect_ppx -conditional))
-)
+ (name GI_bindings_generator)
+ (public_name gi-bindings-generator)
+ (libraries ctypes ctypes.foreign str gobject-introspection)
+ (instrumentation
+  (backend bisect_ppx)))
 
 (ocamllex lexer)
