--- a/tools/dune
+++ b/tools/dune
@@ -1,4 +1,3 @@
 (executables
-   (names raw_generator)
-   (libraries gobject-introspection gi-bindings-generator)
-)
+ (names raw_generator)
+ (libraries gobject-introspection gi-bindings-generator))
