--- a/gi-bindings-generator.opam
+++ b/gi-bindings-generator.opam
@@ -13,7 +13,7 @@ depends: [
   "dune" {build}
   "ctypes"
   "ctypes-foreign"
-  "ounit"
+  "ounit2"
   "bisect_ppx" {build & >= "1.3.0"}
   "gobject-introspection"
 ]
